Article  CRD complete